[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vulnsync"
version = "2.1.0"
description = "Enterprise-Grade Network Security Auditor — Port Scanning, Service Fingerprinting, CVE Correlation & Professional Reporting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["security", "network-scanner", "vulnerability-scanner", "pentest", "audit"]
authors = [
    {name = "VulnSync Security"}
]

[project.scripts]
vulnsync = "vulnsync.cli.main:main"

[tool.setuptools.packages.find]
include = ["vulnsync*"]

[tool.setuptools.package-data]
"vulnsync.report.templates" = ["*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true
